--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "serve": "live-server public/"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,6 +20,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "live-server": "1.2.0",
     "node-sass": "4.8.3",
     "normalize.css": "8.0.0",
     "react": "16.3.1",
