--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "serve": "live-server public/"
+    "heroku-postbuild": "yarn run build:prod",
+    "serve": "live-server public/",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,6 +21,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
+    "express": "4.16.3",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "live-server": "1.2.0",
     "node-sass": "4.8.3",
