--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "start": "node server/server.js"
   },
   "dependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.4",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-polyfill": "6.26.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.11",
-    "express": "4.16.3",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "live-server": "1.2.0",
-    "node-sass": "4.8.3",
-    "normalize.css": "8.0.0",
-    "react": "16.3.1",
-    "react-dom": "16.3.1",
-    "react-modal": "3.3.2",
-    "sass-loader": "6.0.7",
-    "style-loader": "0.20.3",
-    "webpack": "4.5.0"
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "live-server": "^1.2.0",
+    "node-sass": "^4.8.3",
+    "normalize.css": "^8.0.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-modal": "^3.3.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.5.0"
   },
   "devDependencies": {
-    "webpack-cli": "2.0.14",
-    "webpack-dev-server": "3.1.3"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
