--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "serve": "live-server public/",
     "start": "node server/server.js"
   },
+  "engines": {
+    "node": "11.2.0"
+  },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.0",
